public interface Drawable {
  public void drawSelf(Draw draw);
  public void move(double xShift, double yShift);
}
